wp-content/themes/academyAfrica/assets/css/src/widgets/hero.scss
@use "../abstracts/" as *;

$font-family_1: Ibarra Real Nova;
$font-family_2: Lora;
$font-family_3: Open Sans;

.hero {
  padding: 16px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  overflow-x: hidden;

  @include media-breakpoint-down(desktop) {
    max-width: 580px;
    margin: auto;
    padding: 0;
  }
  @include media-breakpoint-down(tablet) {
    max-width: 100%;
    padding: 16px;
  }
  .background-image {
    display: none;

    @include media-breakpoint-up(desktop) {
      display: block;
      height: 475.2px;
      width: 102%;
      background-image: url("../../../images/hero.png");
      background-repeat: no-repeat;
      background-size: cover;
      height: 40vw;
    }

    @include media-breakpoint-up(large) {
      // height: 594px;
    }

    @include media-breakpoint-up(xlarge) {
      height: 46vw;
    }
  }

  .content-parent {
    display: flex;
    flex-direction: column;
    gap: 16px;
    flex: 1;

    .content {
      display: flex;
      flex-direction: column;

      .title {
        .cfa-title {
          text-align: left;
          font-size: 32px;
          line-height: 40px;
          color: $color-shades-black;
          font-family: Ibarra Real Nova;

          a {
            color: var(--primary-700, #0c1a81);
          }

          &::after {
            left: unset;
            transform: unset;
            margin: 16px 0;
          }

          @include media-breakpoint-up(desktop) {
            font-size: 48px;
            line-height: 54px;

            &::after {
              margin: 32px 0;
            }
          }
        }
      }
    }

    .metrics-content {
      display: flex;

      .metrics {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        align-self: stretch;
        padding: 16px;
        background: $color-shades-white;
        width: 100%;
        gap: 10px;

        .metric {
          border-right: 1px solid $color-neutral-500;
          flex: 1;

          &:last-child {
            border-right: none;
          }

          color: $color-shades-black;
          text-align: center;
          font-family: $font-family_3;

          .numbers {
            font-weight: 700;
            font-size: 20px;
            line-height: 24px;
          }

          .label {
            font-size: 14px;
            line-height: 24px;
            font-weight: 400;
          }

          @include media-breakpoint-up(desktop) {
            .numbers {
              font-size: 39px;
              line-height: 47px;
              letter-spacing: -0.39px;
            }

            .label {
              font-size: 23px;
              line-height: 28px;
              letter-spacing: -0.46px;
            }
          }
        }
      }
    }

    @include media-breakpoint-up(desktop) {
      margin-top: -166px;
      padding: 16px;
      width: 100%;

      .content {
        max-width: 587px;
        align-self: flex-end;
      }

      .metrics-content {
        margin: 0 -16px;
        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);

        .metrics {
          gap: 80px;
        }
      }
    }

    @include media-breakpoint-up(large) {
      margin-top: -190px;
      max-width: 1144px;

      .metrics-content {
        margin: unset;
      }
    }

    @include media-breakpoint-up(xlarge) {
      margin-top: -389px;

      .content {
        margin-bottom: 72px;
        margin-right: -111px;
      }
    }
  }

  .mask-image {
    display: none;
    flex: 1;
    align-items: center;
    justify-content: center;

    .mask {
      width: 217px;
      height: 217px;
    }

    @include media-breakpoint-up(tablet) {
      display: flex;
    }

    @include media-breakpoint-up(desktop) {
      display: none;
    }
  }

  @include media-breakpoint-up(desktop) {
    padding: 0;
    flex-direction: column;
  }
}

